# computer_vision_model_apis

./: .gitignore  .platform.app.yaml  Dockerfile  README.md  fetch_data_from_kaggle.sh  pyproject.toml
.circleci/: config.yml
.platform/: routes.yaml  services.yaml
computer_vision_model_api/: note.md  requirements.txt
computer_vision_model_api/api/: __init__.py  config.py  controller.py  main.py  validation.py
computer_vision_model_api/api/schemas/: __init__.py  predict_schema.py
